# network_inventory

./: .coveragerc  .dir-locals.el  .editorconfig  .env-example  .envrc  .flake8  .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  Makefile  Procfile  README.md  README.org  Vagrantfile  clean.sh  conftest.py  dev.sh  development.sh  docker-compose-development.yml  docker-compose-developmnent.yml  docker-compose.yml  flake.nix  manage.py  network_inventory.yaml  production.sh  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.sh
.github/workflows/: codeql.yml  publish.yml  tests.yml
backend/: .coveragerc  conftest.py  manage.py  network_inventory.yaml  run.sh
backend/backups/: admin.py  decorators.py  serializers.py  urls.py  views.py
backend/computers/: admin.py  apps.py  forms.py  serializers.py  urls.py  views.py
backend/core/: serializers.py  urls.py  utils.py  views.py
backend/customers/: admin.py  serializers.py  urls.py  views.py
backend/devices/: serializers.py  tables.py  urls.py  views.py
backend/licenses/: admin.py  serializers.py  urls.py  views.py
backend/nets/: apps.py  decorators.py  models.py  serializers.py  tables.py  urls.py  views.py
backend/network_inventory/: urls.py
backend/requirements/: base.txt
backend/softwares/: apps.py  serializers.py  urls.py  views.py
backend/users/: decorators.py  serializers.py  urls.py  views.py
backups/: admin.py  decorators.py  tables.py  urls.py  views.py
backups/models/: backup.py  notification.py
backups/tests/: test_backup.py  test_backup_detail_view.py  test_backup_form_view.py  test_customer_backup_table_view.py
computers/: admin.py  apps.py  decorators.py  filters.py  forms.py  tables.py  urls.py  views.py
computers/fixtures/: computers.yaml
computers/models/: __init__.py  computer.py  cpu.py  disk.py  gpu.py  raid.py  ram.py
computers/tests/: test_computer.py  test_computer_detail_view.py  test_computer_form.py  test_computer_form_views.py  test_computer_list_view.py  test_customer_computer_table_view.py  test_form.py
core/: admin.py  decorators.py  models.py  serializers.py  tables.py  urls.py  utils.py  views.py
core/fixtures/: core.yaml
core/models/: company.py  time.py  user.py
core/tests/: helper.py  test_get_all_objects_for_allowed_customers.py  test_get_object_with_view_permission.py  test_get_objects_for_customer.py  test_rest.py  test_templatetags.py  test_utils.py
customer/: admin.py  decorators.py  models.py
customer/tests/: test_customer_list_view.py
customers/: decorators.py  forms.py  models.py  tables.py  urls.py  views.py
customers/tests/: test_customer_detail_view.py  test_customer_form.py  test_customer_form_views.py  test_customer_list_view.py  test_location_form.py  test_location_form_view.py
device/: models.py
device/tests/: test_device_detail_view.py
devices/: admin.py  decorators.py  forms.py  models.py  tables.py  urls.py  views.py
devices/fixtures/: devices.yaml
devices/models/: __init__.py  device.py  warranty.py
devices/tests/: test_connected_device.py  test_connected_device_detail_view.py  test_customer_connected_device_detail_view.py  test_customer_device_table_view.py  test_device.py  test_device_category_form_views.py  test_device_detail_view.py  test_device_form.py  test_device_form_views.py  test_warranty_form.py  test_warranty_list.py
docs/: RM  RM.drawio  docs.org  erd.dia  notes.org
frontend/: .eslintrc.js  Dockerfile  Dockerfile-dev  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  axios-api.js  main.js  routes.js
inventory/: admin.py  decorators.py  models.py  tables.py  urls.py  views.py
inventory/fixtures/: inventory.yaml
inventory/migrations/: 0001_initial.py
inventory/models/: __init__.py  computer.py  cpu.py  devices.py  disk.py  groups.py  license.py  location.py  mailalias.py  net.py  notification.py  raid.py  ram.py  software.py  warranty.py
inventory/tests/: conftest.py  test_computer_detail_view.py  test_computer_list_view.py
licenses/: admin.py  apps.py  models.py  tables.py  urls.py  views.py
licenses/tests/: test_customer_license_table_view.py  test_license.py  test_license_form_view.py
nets/: admin.py  apps.py  decorators.py  models.py  tables.py  urls.py  views.py
nets/fixtures/: nets.yaml
network_inventory/: .coveragerc  models.py  pytest.ini  settings.py  urls.py  wsgi.py
network_inventory/inventory/: .dir-locals.el  admin.py  decorators.py  filters.py  models.py  tables.py  urls.py  views.py
network_inventory/network_inventory/: settings.py  urls.py
network_inventory/settings/: base.py  docker.py  local.py  local_flake.py  production.py  ram_test.py
nginx/: nginx.conf
requirements/: base.txt  docker.txt  local.txt  production.txt
softwares/: admin.py  apps.py  tables.py  urls.py  views.py
softwares/fixtures/: softwares.yaml
softwares/models/: __init__.py  license.py  os.py  software.py
softwares/tests/: test_customer_license_table_view.py  test_license.py
src/: conftest.py  manage.py  network_inventory.json  network_inventory.yaml
src/backups/: admin.py  apps.py  decorators.py  tables.py  urls.py  views.py
src/computers/: admin.py  forms.py  tables.py  urls.py  (+1 more)
users/: admin.py  decorators.py  tables.py  urls.py  views.py
(+329 files in other folders)
