[tool.pylint]
max-line-length = 88
load-plugins = [
    "pylint_django",
]
good-names = [
    "pk",
    "ip",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
]

[tool.poetry]
name = "network_inventory"
version = "0.1.0"
description = ""
authors = ["Andreas Zweili <andreas@zweili.ch>"]
license = "GPLv3"
packages = [
  { include = "src" },
]

[tool.mypy]
exclude = [
    "tests/",
]
plugins = ["mypy_django_plugin.main"]
mypy_path = "./src"
# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting these passing should be easy
strict_equality = true
strict_concatenate = true

# Strongly recommend enabling this one as soon as you can
#check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
#disallow_subclassing_any = true
#disallow_untyped_decorators = true
#disallow_any_generics = true

[tool.django-stubs]
django_settings_module = "network_inventory.settings.local"

[[tool.mypy.overrides]]
module = [
       "nested_admin.*",
       "django_tables2.*",
       "floppyforms.*",
       "django_filters.*",
       "crispy_forms.*",
       "mixer.*",
       "guardian.*",
]
ignore_missing_imports = true

[tool.poetry.group.main.dependencies]
python = "^3.9"
Django = "^4.2.10"
django-crispy-forms = "^1.14.0"
django-filter = "^23.2"
django-floppyforms = "^1.9.0"
django-guardian = "^2.4.0"
django-htmx = "^1.13.0"
django-model-utils = "^4.2.0"
django-nested-admin = "^4.0.2"
django-tables2 = "^2.6.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.5"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
coverage = "^7.3.0"
mixer = "^7.2.2"
pylint = "^2.15.8"
pytest = "^7.4.2"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-xdist = "^3.1.0"
python-lsp-server = "^1.8.0"
mypy = "^1.4.1"
django-stubs = "^4.2.3"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
